fix (css): left align text over 2-3 lines

--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ min-height: fit-content;
 
 .blurb_text {
     padding-bottom: 1rem;
+    text-align: left; 
 }
 
 .title {
